syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Auth";
option objc_class_prefix = "HLW";

package com.example;

service AuthService {
  rpc login (LoginRequest) returns (LoginReply) {}
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginReply {
  string jwt = 1;
}
