syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Lab";
option objc_class_prefix = "HLW";

package com.example;

service LabService {
  rpc lab (LabPing) returns (LabPing) {}
}

message LabPing {
  string msg = 1;
}
