syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Stockman";
option objc_class_prefix = "HLW";

package com.example;

service StockmanService {
  rpc stockman (StockmanPing) returns (StockmanPing) {}
}

message StockmanPing {
  string msg = 1;
}
